--- a/templates/login.html
+++ b/templates/login.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gesture based movable bot</title>
+    <title>LOGIN</title>
     <link rel="stylesheet" href="login.css">
 </head>
 
 <body>
     <div class="login-div">
-        <div class="logo"></div>
-        <div class="title">Login</div>
+        <!-- <div class="logo"></div> -->
+        <div class="title">Login</div> <br><br>
         <div class="fields">
             <div class="username">
                 <svg className="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
@@ -29,8 +29,12 @@
                 </svg>
                 <input type="password" class="pass-input" placeholder="Password">
             </div>
-        </div>
-        <button class="signin-button">Login</button>
+        </div><br><br>
+
+        <a href="index.html">
+            <button class="signin-button">Login</button>
+        </a>
+
         <div class="link">
             <a href="#">Forget password?</a> or <a href="#">Sign Up</a>
         </div>
