--- a/templates/index.html
+++ b/templates/index.html
@@ -22,8 +22,8 @@
       <h1>Intro</h1>
       <p>A gesture bot is a robotic device controlled by hand movements or gestures rather than physical controls or remote devices. It interprets gestures made by a user and translates them into commands for movement or other actions.</p>
       <div class="buttons">
-        <a class="button primary" href="https://dribbble.com/shots/21248617-Daily-Design-Code-3-Grainy-Gradients-Blurry-Background" target="_blank">View Design</a>
-        <a class="button secondary" href="https://twitter.com/juxtopposed" target="_blank">Stay Tuned</a>
+        <a class="button primary" href="#" target="_blank">View Design</a>
+        <a class="button secondary" href="#" target="_blank">Stay Tuned</a>
       </div>
       
     </div>
