--- a/templates/index.html
+++ b/templates/index.html
@@ -1,31 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Smart Gesture Based Movable Bot</title>
   <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
 
   <div class="nav">
-    <a href="index.html"><h2>Movable Bot</h2></a>
+    <a href="index.html">
+      <h2>Movable Bot</h2>
+    </a>
     <div class="menu">
       <p>About us</p>
       <p>Our Mission</p>
       <p>Contact us</p>
     </div>
   </div>
-  
+
   <div class="hero">
     <div class="hero-text">
       <h1>Intro</h1>
-      <p>A gesture bot is a robotic device controlled by hand movements or gestures rather than physical controls or remote devices. It interprets gestures made by a user and translates them into commands for movement or other actions.</p>
+      <p>A gesture bot is a robotic device controlled by hand movements or gestures rather than physical controls or
+        remote devices. It interprets gestures made by a user and translates them into commands for movement or other
+        actions.</p>
       <div class="buttons">
         <a class="button primary" href="#" target="_blank">View Design</a>
         <a class="button secondary" href="#" target="_blank">Stay Tuned</a>
       </div>
-      
+
     </div>
     <div class="blob-cont">
       <div class="yellow blob"></div>
@@ -35,18 +41,15 @@
   </div>
   <svg>
     <filter id='noiseFilter'>
-      <feTurbulence 
-        type='fractalNoise' 
-        baseFrequency='0.6' 
-        stitchTiles='stitch'/>
-       <feColorMatrix in="colorNoise" type="matrix" values="1 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 1 0" />
-          <feComposite operator="in" in2="SourceGraphic" result="monoNoise"/>
-          <feBlend in="SourceGraphic" in2="monoNoise" mode="screen" />
+      <feTurbulence type='fractalNoise' baseFrequency='0.6' stitchTiles='stitch' />
+      <feColorMatrix in="colorNoise" type="matrix" values="1 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 1 0" />
+      <feComposite operator="in" in2="SourceGraphic" result="monoNoise" />
+      <feBlend in="SourceGraphic" in2="monoNoise" mode="screen" />
     </filter>
-    
   </svg>
   <!-- Not required -->
-  <!-- <a href="https://www.youtube.com/watch?v=_ZFghigBmqo" target="_blank" class="youtube">Watch on YouTube</a> -->
-  
+  <!-- <a href="https://www.youtube.com/" target="_blank" class="youtube">Watch on YouTube</a> -->
+
 </body>
+
 </html>
