--- a/templates/login.html
+++ b/templates/login.html
@@ -29,8 +29,16 @@
                 </svg>
                 <input type="password" class="pass-input" placeholder="Password">
             </div>
-        </div><br><br>
-
+        </div>
+        
+        <!-- here the code from index.html starts -->
+        <!-- <div class="blob-cont">
+            <div class="yellow blob"></div>
+            <div class="red blob"></div>
+            <div class="green blob"></div>
+        </div> -->
+        
+        <br><br>
         <a href="index.html">
             <button class="signin-button">Login</button>
         </a>
